# couic

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
client/: Cargo.toml
client/src/: lib.rs
client/src/api/v1/: clients.rs  mod.rs  peer.rs  policy.rs  sets.rs  stats.rs
common/: Cargo.toml
common/src/: action.rs  api.rs  cidr.rs  client.rs  clientgroup.rs  clientname.rs  constants.rs  entry.rs  error.rs  expiration.rs  lib.rs  metadata.rs  peer.rs  policy.rs  policypath.rs  rawentry.rs  report.rs  set.rs  setname.rs  setpath.rs  stats.rs  tag.rs  validation.rs
configs/: couic-report.toml  couic.toml  couicctl.toml
couic/: Cargo.toml  build.rs
couic-ebpf/: Cargo.toml
couic-ebpf/src/: main.rs
couic-report/: Cargo.toml
couic-report/src/: config.rs  main.rs  stats.rs  worker.rs
couic-report/src/notifier/: discord.rs  mod.rs
couic/src/: config.rs  error.rs  extractors.rs  main.rs  security.rs
couic/src/api/: clients.rs  middleware.rs  mod.rs  policies.rs  rbac.rs  sets.rs  stats.rs
couic/src/firewall/: lpm.rs  mod.rs  peer.rs  reporting.rs  service.rs  tag.rs
couicctl/: Cargo.toml
couicctl/src/: config.rs  lib.rs  main.rs  ripe.rs
couicctl/src/cli/: clients.rs  mod.rs  policy.rs  sets.rs  stats.rs
pkg/common/: LICENSES
pkg/common/couic/: couic.service  couic.service.preset
pkg/common/couic-report/: couic-report.service  couicreport.service.preset
pkg/debian/couic/: description.txt  postinst  postrm
pkg/debian/couic-report/: description.txt  postinst  postrm
pkg/rpm/couic/: scriptlets.toml
pkg/rpm/couic-report/: scriptlets.toml
tests/integration/: Dockerfile  clients.hurl  couic.toml  cross_policy.hurl  drop.hurl  edge_cases.hurl  http_methods.hurl  ignore.hurl  malformed_requests.hurl  metadata.hurl  run.sh  sets.hurl  stats.hurl
tests/integration/sets/: step1.hurl  step2.hurl  step3.hurl  step4.hurl  step5.hurl  step6.hurl  step7.hurl
website/: couic-architecture.drawio  go.mod  hugo.yaml
website/assets/css/: custom.css
website/content/: _index.md  legal-notice.md
website/content/docs/: _index.md
website/content/docs/administration/: _index.md  auth.md  monitoring.md  peering.md  reverse-proxy.md
website/content/docs/administration/clients-examples/: _index.md  fail2ban.md
website/content/docs/administration/reporting/: _index.md  couic-report.md
website/content/docs/get-couic/: _index.md  build-from-source.md  installation.md
website/content/docs/getting-started/: _index.md  dynamic-filtering.md  filtering-policies.md  static-sets.md
website/content/docs/reference/: _index.md  couicctl.md  project-architecture.md  security.md
website/i18n/: en.yaml
website/static/json/: openapi.json
