[package]
name = "client"
version = "1.0.0"
description = "Couic client library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["blocking", "json", "default-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
toml = { workspace = true, features = ["serde", "parse"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

common = { path = "../common" }

[lints]
workspace = true
