[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and definitions for Couic firewall components"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
ipnet = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
aya = { workspace = true }

[lints]
workspace = true
